fixed some stuff

--- a/proj1/Makefile
+++ b/proj1/Makefile
@@ -2,10 +2,10 @@ OUT_FILE=neadwora_proj1.zip
 
 run:
 	(cd client && make)
-	chmod +x server/chatserve.py
-	chmod +x client/chatclient
-	ln -s server/chatserve.py chatserve
-	ln -s client/chatclient chatclient
+	@chmod +x server/chatserve.py
+	@chmod +x client/chatclient
+	@ln -s server/chatserve.py chatserve 2>/dev/null || true
+	@ln -s client/chatclient chatclient 2>/dev/null || true
 
 submit:
 	rm -rf $(OUT_FILE)
